feat: make title of tags and categories page clickable

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,7 +1,10 @@
 {{ partial "header.html" . }}
 
 {{if not .IsHome }}
-<h1>{{ print .Data.Plural " -> " (.Title | markdownify) }}</h1>
+<h1>
+  <a href='{{ "/" | relLangURL }}{{ .Data.Plural | urlize }}'>{{ .Data.Plural }}</a>
+  {{ print " -> " (.Title | markdownify) }}
+</h1>
 {{ end }}
 
 {{ .Content }}
