fix: move '|' out from `tags`

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,7 +5,8 @@
     <h1><span class="title">{{ .Title | markdownify }}</span></h1>
     {{ if (gt .Params.date 0) }}
     <span>
-        <span class="date">{{ .Date.Format "2006-01-02" }}</span> |
+        <span class="date">{{ .Date.Format "2006-01-02" }}</span>
+        |
         <!-- <span>{{.WordCount}} words</span> | -->
         <span class="cats">
             {{ range $index, $cat := .GetTerms "categories" }}
@@ -13,14 +14,15 @@
             <a href='{{ .Permalink }}'>{{ .LinkTitle }}</a>
             {{ end }}
         </span>
+        {{ if len (.GetTerms "tags") }}
+        |
         <span class="tags">
             {{ range $index, $cat := .GetTerms "tags" }}
-            {{ if not $index }} | {{ end }}
             <a href='{{ .Permalink }}'>#{{ .LinkTitle }}</a>
             {{ end }}
         </span>
+        {{ end }}
     </span>
-    <br>
     <br>
     {{ end }}
 </div>
