--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,6 +86,8 @@ blockquote {
     background: #f9f9f9;
     border-left: 5px solid #ccc;
     padding: 3px 1em 3px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
 
 table {
