feat: add more emojis to web page

--- a/layouts/_default/archives.html
+++ b/layouts/_default/archives.html
@@ -2,7 +2,7 @@
 
 <main class="archives">
 
-    <h2>Tags</h2>
+    <h2>🏷️ Tags</h2>
     <div class="tags">
         {{ range $key, $taxonomy := .Site.Taxonomies.tags }}
         <a class="tag" href="{{ .Page.RelPermalink }}">#{{ .Page.Title }} ({{ .Count }})</a>
@@ -11,7 +11,7 @@
 
     <hr>
 
-    <h2>Categories</h2>
+    <h2>📚 Categories</h2>
     <ul class="terms">
         {{ range $key, $taxonomy := .Site.Taxonomies.categories }}
         <li>
