--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,13 +5,13 @@
     <h1><span class="title">{{ .Title | markdownify }}</span></h1>
     {{ if (gt .Params.date 0) }}
     <span>
-        <span class="date"> {{ .Date.Format "2006-01-02" }}</span>
-        {{ if (ne .Date .Lastmod) }}
+        <span class="date"> 📅 {{ .Date.Format "2006-01-02" }}</span>
+        {{ if (ne (.Date.Format "2006-01-02") (.Lastmod.Format "2006-01-02")) }}
         <span class="date"> (更新于{{ .Lastmod.Format "2006-01-02" }})</span>
         {{ end }}
         /
         <!-- <span>{{.WordCount}} words</span> | -->
-        <span class="cats">
+        <span class="cats"> 📚
             {{ range $index, $cat := .GetTerms "categories" }}
             {{ if $index }} / {{ end }}
             <a href='{{ .Permalink }}'>{{ .LinkTitle }}</a>
@@ -19,7 +19,7 @@
         </span>
         {{ if len (.GetTerms "tags") }}
         /
-        <span class="tags">
+        <span class="tags"> 🏷️
             {{ range $index, $cat := .GetTerms "tags" }}
             <a href='{{ .Permalink }}'>#{{ .LinkTitle }}</a>
             {{ end }}
