--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -2,9 +2,35 @@
 {{ if .enable }}
 <div id="comments">
     <hr>
-    <script src="https://utteranc.es/client.js" repo='{{ .repo }}' issue-term="{{ .issueTerm }}" label='{{ .label }}'
-        theme='{{ .theme }}' crossorigin="anonymous" async>
-        </script>
+    <script src="//geoip-js.com/js/apis/geoip2/v2.1/geoip2.js" type="text/javascript"></script>
+    <script>
+        var onSuccess = function (geoipResponse) {
+            var country_name = geoipResponse.country.names["zh-CN"];
+            var country_code = geoipResponse.country.iso_code;
+            if (!country_code) {
+                return;
+            }
+            if (country_name) {
+                document.getElementById('comments-blocked-country-code').innerHTML = country_name;
+            }
+            if (country_code == 'CN') {
+                document.getElementById('comments-shown').style.display = 'none';
+                document.getElementById('comments-blocked').style.display = '';
+            }
+        };
+        var onError = function (error) {
+        };
+        geoip2.country(onSuccess, onError);
+    </script>
+    <div id="comments-blocked" style="font-style: italic; color: #777; display: none;">
+        评论区已关闭。<span style="float: right;">来自 <span id="comments-blocked-country-code">unknown</span> 的访客
+            <span>&nbsp; - powered by: geoip-js.com</span></span>
+    </div>
+    <div id="comments-shown">
+        <script src="https://utteranc.es/client.js" repo='{{ .repo }}' issue-term="{{ .issueTerm }}"
+            label='{{ .label }}' theme='{{ .theme }}' crossorigin="anonymous" async>
+            </script>
+    </div>
 </div>
 {{ end }}
 {{ end }}
